[package]
name = "rust-mq"
version = "0.1.3"
authors = ["Maksim V. <inre.storm@gmail.com>"]
description = "RustMQ is the MQTT broker written on pure Rust."
license = "MIT"
keywords      = ["MQTT", "publish", "subscribe", "broker", "pubsub"]

[[bin]]
name = "mqttc"
path = "src/bin/mqttc.rs"

[lib]
name = "rustmq"
path = "src/lib.rs"

[dependencies]
term = "0.2"
getopts = "0.2"
openssl = { version = "0.9", features = ["v101", "v102"] }
log = "0.3"
env_logger = "0.3"
url = "^1.2.4"
"mqtt3" = { git = "https://github.com/mcornejo/rust-mqtt3.git" }
"mqttc" = { git = "https://github.com/mcornejo/rust-mqttc.git" }